--- a/website.html
+++ b/website.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        <h1>this my first heading</h1>
-        <p>which the following terms name types of food</p>
+        <title> A story about Myself</title>
+        <style>
+            img{
+                width: 200px; height: 200px;
+                border-radius: 50px; 
+                float: left;
+                margin-right: 15px ;
+        }
+        </style>
         <img src="images/IMG_1319.jpeg" alt="my picture">
+        <h1>@aningwuchisom</h1>
+        <p>which the following terms name types of food</p>
+        
+        
     </body>
 </html>
