adding a few functions

--- a/website.html
+++ b/website.html
@@ -13,7 +13,10 @@
         </style>
         <img src="images/IMG_1319.jpeg" alt="my picture">
         <h1><b>@aningwuchisom</b></h1>
-        <p>I am 22 years old<br>i live with my parents<br>i ventured into tech<br>i am learning web dev</p>
+        <p><b>I am 22 years old<br>i live with my parents<br>i ventured into tech<br>i am learning web dev</b></p>
+
+        <h2 style="text-align: center;">What i like are this</h2>
+        <img src="images/pexels-james-wheeler-1630883.jpg" alt="My view"
         
         
     </body>
