--- a/website.html
+++ b/website.html
@@ -15,9 +15,10 @@
         <h1><b>@aningwuchisom</b></h1>
         <p><b>I am 22 years old<br>i live with my parents<br>i ventured into tech<br>i am learning web dev</b></p>
 
-        <h2 style="text-align: center;">What i like are this</h2>
+        <h2 style="text-align: left;">What i like are this</h2>
         <img src="images/pexels-james-wheeler-1630883.jpg" alt="My view"
-        
+        <a>link to my Youtube</a>
+
         
     </body>
 </html>
