--- a/button(L2).html
+++ b/button(L2).html
@@ -1,10 +1,49 @@
 <style>
-  button{
-    background-color: rgba(231, 9, 9, 0.801);
+  .subcribe-button{
+    background-color: hwb(0 4% 9%);
     color: white;
     border: none;
-    height: 30px;
-    width: 105px;
+    height: 40px;
+    width: 120px;
+    border-radius: 15px;
+    cursor: pointer;
+    margin-right: 8px;
   }
 </style>
-<button>SUBCRIBE</button>
+<button class="subcribe-button">
+  SUBCRIBE
+</button>
+<style>
+  .join-button {
+    color: blue;
+    height: 35px;
+    width: 70px;
+    background-attachment: white;
+    cursor: pointer;
+  
+  }
+  
+</style>
+<button class="Join-button">
+  JOIN
+</button>
+
+<style>
+  .Tweet-button{
+    
+    background-color: hsl(240, 53%, 61%);
+    height: 36px;
+    width: 90px;
+    color: white;
+    border-radius: 15px;
+    cursor: pointer;
+    border-style: solid;
+    border-width: 1px;
+    font-size: 100%;
+    border: none;
+    margin-left: 8px;
+  }
+</style>
+
+<button class="Tweet-button">
+  Tweet</button>
