padding, css box model

--- a/lesson2a.html
+++ b/lesson2a.html
@@ -3,12 +3,15 @@
     background-color: hwb(0 4% 9%);
     color: white;
     border: none;
-    height: 40px;
-    width: 120px;
+   padding-top: 10px;
+   padding-bottom: 10px ;
+   padding-left: 16px;
+   padding-right: 16px;
     border-radius: 15px;
     cursor: pointer;
     margin-right: 8px;
     transition: opacity 0.15s ;
+    vertical-align: top;
   }
   .subcribe-button:hover{
     opacity: 0.8;
@@ -22,18 +25,22 @@
 </button>
 <style>
   .join-button {
-    color: rgb(41, 118, 211);
-    height: 35px;
-    width: 70px;
+    color: rgb(6, 95, 212);
+    padding-top: 9px;
+   padding-bottom: 9px ;
+   padding-left: 16px;
+   padding-right: 16px;
     background-attachment: white;
     cursor: pointer;
     border-width: 0.5px;
     color:  rgb(41, 118, 211);
     transition: background-color 0.5s, color 0.5s;
+    vertical-align: top;
+  
   
   }
   .join-button:hover{
-    background-color: rgb(41, 118, 211) ;
+    background-color: rgb(6, 95, 212) ;
     color: white;
   }
   .join-button:active{
@@ -48,9 +55,11 @@
 <style>
   .Tweet-button{
     
-    background-color: rgb(2, 118, 255);
-    height: 36px;
-    width: 90px;
+    background-color: rgb(29, 155, 240);
+    padding-top: 10px;
+   padding-bottom: 10px ;
+   padding-left: 16px;
+   padding-right: 16px;
     color: white;
     border-radius: 15px;
     cursor: pointer;
@@ -61,6 +70,7 @@
     margin-left: 8px;
     transition: box-shadow 0.15s;
     transition: box-shadow 0.2s ;
+    vertical-align: top;
   
   }
   .Tweet-button:hover{
@@ -69,4 +79,4 @@
 </style>
 
 <button class="Tweet-button">
-  Tweet</button>
+  Tweet </button>
