--- a/lesson2b.html
+++ b/lesson2b.html
@@ -121,7 +121,10 @@ transition: color 0.5;
 
 <br><hr>
 
-<a href="https://www.amazon.com/"> <p style="color: rgb(0, 113, 133);"> Back from Amazon </p></a>
+<a href="https://www.amazon.com/"> 
+  <p style="color: rgb(0, 113, 133);">
+     Back from Amazon </p></a>
+     
 <h1>Nike Black Running Shoes</h1>
 <p style="color: rgb(0, 118, 0);"><b>$39 - in stock</b></p>
 <p><b>Free delivery tomorrow</b></p>
