--- a/text(L5).html
+++ b/text(L5).html
@@ -1,11 +1,67 @@
 <style>
-.video-title{
-font-family: Arial;
-font-size: 30px;
-font-weight: bold;
-}
-</style>
-<p class="video-title">
-<i>    I love HTML and CSS will soon learn Javascript</i>
+  p {
+    font-family: Arial;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .video-title {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: left;
+    width: 280px;
+    line-height: 24px;
+    margin-bottom: 5px;
+  }
+  .bingo-text {
+    font-size: 14px;
+    color: rgb(96, 96, 96);
+    margin-bottom: 20px;
+  }
 
+  .video-author {
+    color: rgb(96, 96, 96);
+    font-size: 14px;
+    margin-bottom: 20px;
+  }
+
+  .News-text {
+    font-size: 14px;
+    text-align: left;
+    width: 280px;
+    color: rgb(96, 96, 96);
+    line-height: 22px;
+    margin-bottom: 100px;
+  }
+  
+  .Apple-text{
+    margin-bottom: 50px;
+    font-size: 14px;
+    background-color: rgb(227, 65, 64);
+    color: white;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    text-align: center;
+
+
+  }
+  .span-Eg:hover{
+    text-decoration: underline;
+    cursor: pointer;
+  }
+</style>
+
+<p class="video-title">Talking Tech and AI with Google CEO Sundar Pichail!</p>
+
+<p class="bingo-text">3.4M view &#183; 6 months ago</p>
+
+<p class="video-author">Marques Brownlee &#10004;</p>
+
+<p class="News-text">
+  Taliking tech and AI on the heels of Google I/O Also a daily driver phone
+  reveals from Google's CEO Shoutout to Sundar!
 </p>
+
+<p class="Apple-text">
+    Shop early for the best selection of holiday favourites. <span class="span-Eg">Shop now &gt;</span> 
+</p>
+
