5f and 5g done lesson 5

--- a/5f,5g.html
+++ b/5f,5g.html
@@ -36,14 +36,56 @@
 </style>
 <p class="Math">
     +18.05(1.75%) today
+
 </p>
 
 
 <style>
     .red{
         color: gray;
+        margin-bottom: 20px;
     }
 </style>
 <p class="red">
     After hours 1,048.00 <span style="color: red;">-1.61 (0.15%)</span> 
+</p>
+
+<hr>
+
+<style>
+    .free{
+color: black;
+font-weight: bold;
+margin-bottom: 10px;
+    }
+</style>
+<p class="free">
+    freeCodeCamp.org <span style="color: gray; font-weight: lighter;">@freeCodeCamp 1h</span>
+</p>
+
+
+<style>
+    .note{
+        color: black;
+        font-family: Arial;
+        width: 500px;
+        margin-bottom: 10px;
+    }
+</style>
+<p class="note">
+    As web developer, you'll want to make your project
+     easy to use and navigate round.
+
+</p>
+
+<style>
+    .here{
+        color: black;
+        font-family: Arial;
+
+    }
+</style>
+<p class="here">
+    Here <span style="color: rgb(92, 92, 255);"> @chp_it </span>outline the top skills new 
+    developers should have.
 </p>
