change of names, new files

--- a/T.B1.html
+++ b/T.B1.html
@@ -1,6 +1,19 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        
+<title>transition etc</title>
 <a href="https://www.amazon.com/" target="_blank">Back to Amazon</a>
+  </head>
+  
+    <body>
+
 <p><b> Black Running Shoes</b></p>
 <p><b>$39</b> - in stock</p>
 <p>Free delivery tommorrow</p>
 <button>Add to Cart</button>
 <button>Buy now</button>
+
+
+    </body>
+</html>
