--- a/Textbox.html
+++ b/Textbox.html
@@ -28,6 +28,11 @@
 
             }
 
+            .google{
+        width: 200px;
+         padding-left: 150px;
+       }
+
             .textbox2{
                width: 500px;
                height: 30px;
@@ -36,6 +41,7 @@
             box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.5);
             border-width: 1px;
             border: none;
+            display: block;
 
             }
 
@@ -100,6 +106,8 @@
         vertical-align: middle;
         object-position: right;
        }
+
+      
         </style>
     </head>
     <body>
@@ -117,6 +125,7 @@
 <input class="textbox" type="text" placeholder="Search">
 
 <hr>
+<img class="google" src="thumbnails/google_PNG.png" alt="">
 
 <input class="textbox2" type="text" placeholder="Search Google or type a URL">
 
